fix: make drop-shadow of the header visible

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -147,6 +147,7 @@ $button-gradient: linear-gradient(-10deg, #9356dc -11.44%, #ff79da 123.93%);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   box-sizing: border-box;
   position: relative;
+  z-index: 1;
 
   img {
     width: 100%;
